<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="Map" />
        <item
            android:id="@+id/nav_bathroom"
            android:icon="@drawable/bathroom"
            android:title="Bathrooms" />
        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/job"
            android:title="Jobs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="Settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="Logout" />
    </group>
</menu>