...
        android:layout_centerHorizontal="true"
        android:text="Username: "
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/editSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:backgroundTint="#eeeeee"
...
