...
        android:layout_marginTop="515dp"
        android:layout_centerHorizontal="true"
        android:textColor="#8B0000"
        android:text="Incorrect username or password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="560dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:backgroundTint="#eeeeee"
...
